# kulki

./: .geanyprj  .gitignore  AIPlayers.cpp  AIPlayers.hpp  Ball.xcf  BallTypeSettingsDialog.cpp  BallTypeSettingsDialog.hpp  CMakeLists.txt  ColorComboBox.cpp  ColorComboBox.hpp  Doxyfile  HighScores.cpp  HighScores.hpp  HumanPlayer.cpp  HumanPlayer.hpp  NewGameDialog.cpp  NewGameDialog.hpp  PlayerSetupWidget.cpp  PlayerSetupWidget.hpp  README  aiplayer.cpp  aiplayer.hpp  array2.hpp  ball.cpp  ball.hpp  ballcolor.cpp  ballcolor.hpp  ballitem.cpp  ballitem.hpp  balltypes.cpp  balltypes.hpp  board.cpp  board.hpp  boardimplementation.cpp  boardimplementation.hpp  colorballitem.cpp  colorballitem.hpp  debugtools.hpp  gloss.cpp  gloss.hpp  (+20 more)
docs/html/: annotated.html  ball_8hpp_source.html  ballcolor_8hpp_source.html  ballitem_8hpp_source.html  balltypes_8hpp_source.html  board_8hpp_source.html  boardimplementation_8hpp_source.html  classBall-members.html  classBall.html  classBallColor-members.html  classBallColor.html  classBallItem-members.html  classBallItem.html  classBoard-members.html  classBoard.html  classBoardImplementation-members.html  classBoardImplementation.html  classBoard_1_1BoardInfo-members.html  classBoard_1_1BoardInfo.html  classCameleonBall-members.html  classCameleonBall.html  classColorBall-members.html  classColorBall.html  classDoubleBall-members.html  classDoubleBall.html  classHourglassBall-members.html  classHourglassBall.html  classJokerBall-members.html  classJokerBall.html  classMainWindow-members.html  classMainWindow.html  classSkullBall-members.html  classSkullBall.html  classSquare-members.html  classSquare.html  classSwapPretender-members.html  classSwapPretender.html  classes.html  debugtools_8hpp_source.html  files.html  (+11 more)
docs/html/search/: all_62.js  all_63.js  all_64.js  all_67.js  all_68.js  all_6f.js  all_72.js  all_73.js  classes_62.js  classes_63.js  classes_67.js  classes_68.js  classes_6a.js  classes_73.js  functions_62.js  functions_63.js  functions_67.js  functions_68.js  functions_69.js  functions_6d.js  functions_6e.js  functions_73.js  functions_77.js  functions_7e.js  search.js
